// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering Main Render AddMovies Component render component 1`] = `
<DocumentFragment>
  <div>
    <form>
      <h1>
        Create Movie
      </h1>
      <div>
        <label>
          Id:
        </label>
        <input
          name="id"
          type="text"
        />
      </div>
      <div>
        <label>
          Title:
        </label>
        <input
          name="title"
          type="text"
        />
      </div>
      <div>
        <label>
          Director:
        </label>
        <input
          name="director"
          type="text"
        />
      </div>
      <div>
        <label>
          Distributor:
        </label>
        <input
          name="distributor"
          type="text"
        />
      </div>
      <div>
        <label>
          Imdb_rating:
        </label>
        <input
          name="imdb_rating"
          type="text"
        />
      </div>
      <div>
        <label>
          Imdb_votes:
        </label>
        <input
          name="imdb_votes"
          type="text"
        />
      </div>
      <div>
        <input
          id="back"
          type="submit"
          value="Save movie"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Rendering Main Render EditMovies Component render component 1`] = `
<DocumentFragment>
  <div>
    <form>
      <h1>
        Edit Movie with ID 
      </h1>
      <div>
        <label>
          Id:
        </label>
        <input
          name="id"
        />
      </div>
      <div>
        <label>
          Title:
        </label>
        <input
          name="title"
          type="text"
        />
      </div>
      <div>
        <label>
          Director:
        </label>
        <input
          name="director"
          type="text"
        />
      </div>
      <div>
        <label>
          Distributor:
        </label>
        <input
          name="distributor"
          type="text"
        />
      </div>
      <div>
        <label>
          Imdb_rating:
        </label>
        <input
          name="imdb_rating"
          type="text"
        />
      </div>
      <div>
        <label>
          Imdb_votes:
        </label>
        <input
          name="imdb_votes"
          type="text"
        />
      </div>
      <div>
        <input
          type="submit"
          value="Update movie"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Rendering Main Render Movie Component Render Component render component 1`] = `
<DocumentFragment>
  <div>
    <p />
    <div>
      <div />
      <div>
        <div>
          <input
            id="search"
            placeholder="Search"
          />
        </div>
        <div>
          <h1>
            Movies
          </h1>
          <button
            id="add"
          >
            Add
          </button>
        </div>
      </div>
      <div />
    </div>
    <div>
      <table>
        <thead>
          <tr>
            <th>
              ID
            </th>
            <th>
              TITLE
            </th>
            <th>
              DIRECTOR
            </th>
            <th>
              DISTRIBUTOR
            </th>
            <th>
              IMDB_RATING
            </th>
            <th>
              IMDB_VOTES
            </th>
            <th>
              ACTIONS
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              1
            </td>
            <td>
              Following
            </td>
            <td>
              Christopher Nolan
            </td>
            <td>
              Zeitgeist
            </td>
            <td>
              7.7
            </td>
            <td>
              15133
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              2
            </td>
            <td>
              12 Angry Men
            </td>
            <td>
              Sidney Lumet
            </td>
            <td>
              United Artists
            </td>
            <td>
              8.9
            </td>
            <td>
              119101
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              3
            </td>
            <td>
              Twelve Monkeys
            </td>
            <td>
              Terry Gilliam
            </td>
            <td>
              Universal
            </td>
            <td>
              8.1
            </td>
            <td>
              169858
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              4
            </td>
            <td>
              1941
            </td>
            <td>
              Steven Spielberg
            </td>
            <td>
              Universal
            </td>
            <td>
              5.6
            </td>
            <td>
              13364
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              5
            </td>
            <td>
              24 7: Twenty Four Seven
            </td>
            <td>
              Shane Meadows
            </td>
            <td>
              October Films
            </td>
            <td>
              6.9
            </td>
            <td>
              1417
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              6
            </td>
            <td>
              Twin Falls Idaho
            </td>
            <td>
              Michael Polish
            </td>
            <td>
              Sony Pictures Classics
            </td>
            <td>
              7.1
            </td>
            <td>
              2810
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              7
            </td>
            <td>
              3 Men and a Baby
            </td>
            <td>
              Leonard Nimoy
            </td>
            <td>
              Walt Disney Pictures
            </td>
            <td>
              5.7
            </td>
            <td>
              16764
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              8
            </td>
            <td>
              Four Rooms
            </td>
            <td>
              Robert Rodriguez
            </td>
            <td>
              Miramax
            </td>
            <td>
              6.4
            </td>
            <td>
              34328
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              9
            </td>
            <td>
              The Four Seasons
            </td>
            <td>
              Alan Alda
            </td>
            <td>
              Universal
            </td>
            <td>
              7
            </td>
            <td>
              1814
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              10
            </td>
            <td>
              Four Weddings and a Funeral
            </td>
            <td>
              Mike Newell
            </td>
            <td>
              Gramercy
            </td>
            <td>
              7.1
            </td>
            <td>
              39003
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              11
            </td>
            <td>
              Nine 1/2 Weeks
            </td>
            <td>
              Adrian Lyne
            </td>
            <td>
              MGM
            </td>
            <td>
              5.4
            </td>
            <td>
              12731
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              12
            </td>
            <td>
              The Abyss
            </td>
            <td>
              James Cameron
            </td>
            <td>
              20th Century Fox
            </td>
            <td>
              7.6
            </td>
            <td>
              51018
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              13
            </td>
            <td>
              Ace Ventura: Pet Detective
            </td>
            <td>
              Tom Shadyac
            </td>
            <td>
              Warner Bros.
            </td>
            <td>
              6.6
            </td>
            <td>
              63543
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              14
            </td>
            <td>
              Ace Ventura: When Nature Calls
            </td>
            <td>
              Steve Oedekerk
            </td>
            <td>
              Warner Bros.
            </td>
            <td>
              5.6
            </td>
            <td>
              51275
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              15
            </td>
            <td>
              The Alamo
            </td>
            <td>
              John Wayne
            </td>
            <td>
              United Artists
            </td>
            <td>
              5.9
            </td>
            <td>
              10063
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              16
            </td>
            <td>
              Alive
            </td>
            <td>
              Frank Marshall
            </td>
            <td>
              Walt Disney Pictures
            </td>
            <td>
              3.2
            </td>
            <td>
              124
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              17
            </td>
            <td>
              Amen
            </td>
            <td>
              Costa-Gavras
            </td>
            <td>
              Kino International
            </td>
            <td>
              7.4
            </td>
            <td>
              5416
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              18
            </td>
            <td>
              American Graffiti
            </td>
            <td>
              George Lucas
            </td>
            <td>
              Universal
            </td>
            <td>
              7.6
            </td>
            <td>
              30952
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              19
            </td>
            <td>
              The American President
            </td>
            <td>
              Rob Reiner
            </td>
            <td>
              Sony Pictures
            </td>
            <td>
              6.8
            </td>
            <td>
              22780
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              20
            </td>
            <td>
              Annie Hall
            </td>
            <td>
              Woody Allen
            </td>
            <td>
              MGM
            </td>
            <td>
              8.2
            </td>
            <td>
              65406
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              21
            </td>
            <td>
              The Adventures of Huck Finn
            </td>
            <td>
              Stephen Sommers
            </td>
            <td>
              Walt Disney Pictures
            </td>
            <td>
              5.8
            </td>
            <td>
              3095
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              22
            </td>
            <td>
              The Apartment
            </td>
            <td>
              Billy Wilder
            </td>
            <td>
              United Artists
            </td>
            <td>
              8.4
            </td>
            <td>
              36485
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              23
            </td>
            <td>
              Apocalypse Now
            </td>
            <td>
              Francis Ford Coppola
            </td>
            <td>
              MGM
            </td>
            <td>
              8.6
            </td>
            <td>
              173141
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              24
            </td>
            <td>
              Arachnophobia
            </td>
            <td>
              Frank Marshall
            </td>
            <td>
              Walt Disney Pictures
            </td>
            <td>
              6.2
            </td>
            <td>
              20528
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              25
            </td>
            <td>
              Barry Lyndon
            </td>
            <td>
              Stanley Kubrick
            </td>
            <td>
              Warner Bros.
            </td>
            <td>
              8.1
            </td>
            <td>
              39909
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              26
            </td>
            <td>
              Babe
            </td>
            <td>
              Chris Noonan
            </td>
            <td>
              Universal
            </td>
            <td>
              7.3
            </td>
            <td>
              35644
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              27
            </td>
            <td>
              Baby's Day Out
            </td>
            <td>
              Patrick Read Johnson
            </td>
            <td>
              20th Century Fox
            </td>
            <td>
              5
            </td>
            <td>
              8332
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              28
            </td>
            <td>
              Bound by Honor
            </td>
            <td>
              Taylor Hackford
            </td>
            <td>
              Walt Disney Pictures
            </td>
            <td>
              7.7
            </td>
            <td>
              10142
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              29
            </td>
            <td>
              Back to the Future
            </td>
            <td>
              Robert Zemeckis
            </td>
            <td>
              Universal
            </td>
            <td>
              8.4
            </td>
            <td>
              201598
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              30
            </td>
            <td>
              Back to the Future Part II
            </td>
            <td>
              Robert Zemeckis
            </td>
            <td>
              Universal
            </td>
            <td>
              7.5
            </td>
            <td>
              87341
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              31
            </td>
            <td>
              Back to the Future Part III
            </td>
            <td>
              Robert Zemeckis
            </td>
            <td>
              Universal
            </td>
            <td>
              7.1
            </td>
            <td>
              77541
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              32
            </td>
            <td>
              Butch Cassidy and the Sundance Kid
            </td>
            <td>
              George Roy Hill
            </td>
            <td>
              20th Century Fox
            </td>
            <td>
              8.2
            </td>
            <td>
              57602
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              33
            </td>
            <td>
              Bad Boys
            </td>
            <td>
              Michael Bay
            </td>
            <td>
              Sony Pictures
            </td>
            <td>
              6.6
            </td>
            <td>
              53929
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              34
            </td>
            <td>
              Body Double
            </td>
            <td>
              Brian De Palma
            </td>
            <td>
              Sony/Columbia
            </td>
            <td>
              6.4
            </td>
            <td>
              9738
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              35
            </td>
            <td>
              Ben-Hur
            </td>
            <td>
              William Wyler
            </td>
            <td>
              MGM
            </td>
            <td>
              8.2
            </td>
            <td>
              58510
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              36
            </td>
            <td>
              Before Sunrise
            </td>
            <td>
              Richard Linklater
            </td>
            <td>
              Sony Pictures
            </td>
            <td>
              8
            </td>
            <td>
              39705
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              37
            </td>
            <td>
              Beauty and the Beast
            </td>
            <td>
              Gary Trousdale
            </td>
            <td>
              Walt Disney Pictures
            </td>
            <td>
              3.4
            </td>
            <td>
              354
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              38
            </td>
            <td>
              The Best Years of Our Lives
            </td>
            <td>
              William Wyler
            </td>
            <td>
              RKO Radio Pictures
            </td>
            <td>
              8.2
            </td>
            <td>
              17338
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              39
            </td>
            <td>
              Battle for the Planet of the Apes
            </td>
            <td>
              Jack Lee Thompson
            </td>
            <td>
              20th Century Fox
            </td>
            <td>
              5
            </td>
            <td>
              6094
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              40
            </td>
            <td>
              Bogus
            </td>
            <td>
              Norman Jewison
            </td>
            <td>
              Warner Bros.
            </td>
            <td>
              4.8
            </td>
            <td>
              2742
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              41
            </td>
            <td>
              Beverly Hills Cop
            </td>
            <td>
              Martin Brest
            </td>
            <td>
              Paramount Pictures
            </td>
            <td>
              7.3
            </td>
            <td>
              45065
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              42
            </td>
            <td>
              Beverly Hills Cop II
            </td>
            <td>
              Tony Scott
            </td>
            <td>
              Paramount Pictures
            </td>
            <td>
              6.1
            </td>
            <td>
              29712
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              43
            </td>
            <td>
              Beverly Hills Cop III
            </td>
            <td>
              John Landis
            </td>
            <td>
              Paramount Pictures
            </td>
            <td>
              5
            </td>
            <td>
              21199
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              44
            </td>
            <td>
              Big
            </td>
            <td>
              Penny Marshall
            </td>
            <td>
              20th Century Fox
            </td>
            <td>
              7.2
            </td>
            <td>
              49256
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td>
              45
            </td>
            <td>
              The Big Parade
            </td>
            <td>
              King Vidor
            </td>
            <td>
              MGM
            </td>
            <td>
              8.4
            </td>
            <td>
              2600
            </td>
            <td>
              <button
                id="edit"
              >
                Edit
              </button>
              <button
                id="delete"
              >
                Delete
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
